# swarmbot

./: .gitignore  README.md  bot.py  config.yaml  letta_client.py  package-lock.json  package.json  pyproject.toml  swarm.yaml
src/: auth.ts  bot.ts  config.ts  index.ts  logger.ts
src/channels/bluesky/: adapter.ts  runtime.ts  types.ts
src/channels/irc/: adapter.ts  channelTypes.ts  formatter.ts  plugin.ts  runtime.ts  transport.ts  types.ts
swarmbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: bluesky-channel.test.ts  freeq-bot-key-auth.test.ts  swarm-bot.test.ts
