[project]
name = "swarmbot"
version = "0.1.0"
description = "IRC bot that dispatches @mentions to Letta agents"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "certifi>=2024.0",
]

[project.scripts]
swarmbot = "bot:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot", "letta_client"]
